# dekarz-ai

./: .env.example  .gitignore  Makefile  README.md  config.py
devops/: Dockerfile  docker-compose.yaml  pyproject.toml
src/: config.py  main.py
src/api/: app.py
src/api/routers/: health.py  transform.py
src/celery_app/: app.py  tasks.py
src/converters/: __init__.py  abstract_converter.py  urg_converter.py
src/converters/pdf2png/: converter.py
src/converters/png2urg/: converter.py
src/converters/png2urg/tools/: object_detector.py
src/core/: pipeline.py
src/db/: crud.py  database.py  models.py
src/geometry/: angle_correction.py  building_structure.py  building_structure_arch.py  denoising.py  line_correction.py  line_detection.py  objects.py  ocr.py  ocr_utils.py  pipeline.py  utils.py
src/routers/: transform.py
src/schemas/: __init__.py  job.py  urg.py
src/tmp/: fourier.py  gml.py  hawp_test.py  lines-arch.py  lines.py  methode1.py  methode2.py  methode3.py  run_ocr.py  script.py  script2.py
src/utils/: debug.py  errors.py  files.py
