[tool.poetry]
name = "dekarz-ai"
version = "0.1.0"
description = "TODO"
authors = [
    "Grzegorz Żurek <grzegorz.zurek@stermedia@ai>",
    "Dominik Kurowski <dominik.kurowski@stermedia.ai>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.7"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.43"
numpy = "^2.3.3"
psycopg2-binary = "^2.9.10"
celery = "^5.5.3"
redis = "^6.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"